fix: optimisations
Signed-off-by: Thaddeus Kuah <tk@tkkr.dev>